[package]
name = "lox_weather_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
